welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: value unary_! is not a member of Unit
  while (!fonctionTest){
         ^SnakeBuggle:13: warning: enclosing method fonctionTest has result type Unit: return value discarded
   	return estFaceMur()
        ^SnakeBuggle:17: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return estFaceMur()
    ^